// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component renders with body preset 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#000",
          "flexShrink": 1,
          "flexWrap": "wrap",
        },
        [
          {
            "color": "#252A48",
            "fontSize": 24,
            "fontWeight": "400",
            "lineHeight": 28.56,
          },
          undefined,
        ],
      ]
    }
  >
    Sample text
  </Text>
</View>
`;

exports[`Text Component renders with caption preset 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#000",
          "flexShrink": 1,
          "flexWrap": "wrap",
        },
        [
          {
            "color": "#252A48",
            "fontSize": 18,
            "fontWeight": "300",
            "lineHeight": 21.419999999999998,
          },
          undefined,
        ],
      ]
    }
  >
    Sample text
  </Text>
</View>
`;

exports[`Text Component renders with subTitle preset 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#000",
          "flexShrink": 1,
          "flexWrap": "wrap",
        },
        [
          {
            "color": "#252A48",
            "fontSize": 24,
            "fontWeight": "700",
            "lineHeight": 28.56,
          },
          undefined,
        ],
      ]
    }
  >
    Sample text
  </Text>
</View>
`;

exports[`Text Component renders with title preset 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#000",
          "flexShrink": 1,
          "flexWrap": "wrap",
        },
        [
          {
            "color": "#252A48",
            "fontSize": 30,
            "fontWeight": "700",
            "lineHeight": 35.699999999999996,
          },
          undefined,
        ],
      ]
    }
  >
    Sample text
  </Text>
</View>
`;

exports[`Text Component should render correctly 1`] = `
<View>
  <Text
    style={
      [
        {
          "color": "#000",
          "flexShrink": 1,
          "flexWrap": "wrap",
        },
        [
          {
            "color": "#252A48",
            "fontSize": 24,
            "fontWeight": "400",
            "lineHeight": 28.56,
          },
          undefined,
        ],
      ]
    }
  >
    Sample text
  </Text>
</View>
`;
